@@ -3,3 +3,5 @@
   Add option hash argument to Rassphrase#generate
   Add boolean argument to Rassphrase#passphrase, that indicates capitalization
   Rename Rassphrase#generate_code to Rassphrase#random_code
+  Add class method Rassphrase::generate
+  Overwrote Rassphrase#to_s
